--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="images/WebStudio.png" alt="logo WebStudio" />
+      <img /><a href="#WebStudio">WebStudio</a>
       <ul>
         <li><a href="#Studio">Studio</a></li>
         <li><a href="Portfolio">Portfolio</a></li>
@@ -86,7 +86,7 @@
         </ul>
       </section>
       <footer>
-        <img src="images/WebStudio.png" alt="logo WebStudio" />
+        <img /><a href="#WebStudio">WebStudio</a>
         <address>
           <ul>
             <li><a href="">695 Park Ave, NY 10065,USA</a></li>
