--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Homework 1</title>
+    <title>Studio</title>
   </head>
   <body>
     <header>
-      <img /><a href="#WebStudio">WebStudio</a>
+      <nav>
+      <a href="#WebStudio">WebStudio</a>
       <ul>
         <li><a href="#Studio">Studio</a></li>
         <li><a href="Portfolio">Portfolio</a></li>
         <li><a href="Contacts">Contacts</a></li>
+        </nav>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+12127724150">+12127724150</a></li>
       </ul>
